<resources>
    <string name="app_name">MoodTracker</string>
    <string name="mood_event">Mood Event</string>
    <string name="search_hint">search for a user</string>
    <string name="search_button_text">search</string>
    <string name="title_activity_map">Map</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="happy_mood">Happy</string>
    <string name="alone">Alone</string>
    <string name="edit">Edit</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="reason">Reason</string>
    <string name="done">Done</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="username">Username</string>
    <string name="create_account_clickable_text">Account Clickable</string>
    <string name="create_account_prompt_string">Create Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
